compiler/testData/multiplatform/inlineClasses/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/inlineClasses/jvm.kt:5:1: error: actual class 'Foo2' has no corresponding expected declaration
The following declaration is incompatible because modifiers are different (companion, inner, inline):
    public final expect inline class Foo2

actual class Foo2 actual constructor(actual val y: String)
^

-- JS --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/inlineClasses/js.kt:5:1: error: actual class 'Foo2' has no corresponding expected declaration
The following declaration is incompatible because modifiers are different (companion, inner, inline):
    public final expect inline class Foo2

actual class Foo2 actual constructor(actual val y: String)
^
